
* SOLR-11752: Support "Accept-Encoding" header to enable response gzip compression
  (Matthew Sporleder, Houston Putman, Shawn Heisey, Jan Høydahl)

* SOLR-15610: log4j-layout-template-json is now included in solr server, allowing JSON formatted logs to be configurable. (hossman)

* SOLR-15607: Explicitly indent results in Admin Query UI by default (Olvia Falk via Eric Pugh)

Optimizations
---------------------
* SOLR-15433: Replace transient core cache LRU by Caffeine cache. (Bruno Roustant)

* SOLR-15496: Reuse comparator objects in contrib/ltr rescorer classes. (marcosfpr via Christine Poerschke)

Bug Fixes
---------------------
* SOLR-15311: Support async parameter in MODIFYCOLLECTION
  (Nazerke Seidan, Christine Poerschke, David Smiley)

* SOLR-15531: SignificantTerms streaming function should not fail on empty collections (Benedikt Arnold via Mike Drob)

* SOLR-15482: Cross-collection join fixed to ignore documents that do not contain value in "from" field (hossman)

* SOLR-15575: Propagate request level basic auth creds from the top-level async CollectionAdminRequest to internally
  used async requests, such as async status checking (Timothy Potter)

* SOLR-14758: Fix NPE in QueryComponent.mergeIds when using timeAllowed and sorting
  (Bram Van Dam, Uwe Schindler)

* SOLR-15579: Allow for many values in a SQL IN clause; previously using more than 19 would result in
  the IN clause being ignored, now users are only limited by the `maxBooleanClauses` configured for a collection (Timothy Potter)

* SOLR-8889: Fixed various problems in Solr and SolrJ that could cause deleteById commands with "_route_" information to processed
  by the wrong shard, and/or fail when forwarded to replicas from the shard leader. (Dan Fox, Yuki Yano, hossman)

* SOLR-15410: Always use -Xverbosegclog for OpenJ9.  (Colvin Cowie via Eric Pugh)

* SOLR-13209: Fix NPE when no grouping query specified  (Collins Abanda via Mike Drob)
