@@ -263,10 +263,56 @@
         <lst name="query">
           <str name="path">/admin/metrics</str>
           <lst name="params">
-            <str name="group">all</str>
-            <str name="type">all</str>
-            <str name="prefix"></str>
-            <str name="property"></str>
+            <!--
+              trim some of these expressions as needed if you don't care about
+              a particular group of metrics.
+            -->
+            <str name="expr">solr\.jetty:.*DefaultHandler.*</str>
+            <str name="expr">solr\.jvm:.*</str>
+            <str name="expr">solr\.node:.*</str>
+            <str name="expr">solr\.overseer:.*</str>
+            <str name="expr">solr\.core\..*:QUERY\..*</str>
+            <str name="expr">solr\.core\..*:ADMIN\..*</str>
+            <str name="expr">solr\.core\..*:CACHE\..*</str>
+            <str name="expr">solr\.core\..*:UPDATE\.updateHandler\..*</str>
+            <str name="expr">solr\.core\..*:CORE\.fs\..*</str>
+            <str name="expr">solr\.core\..*:HIGHLIGHTER\..*</str>
+            <str name="expr">solr\.core\..*:INDEX\..*</str>
+            <str name="expr">solr\.core\..*:REPLICATION\.replication\..*</str>
+            <str name="expr">solr\.core\..*:SEARCHER\.searcher\..*</str>
+
+            <!-- Alternative expressions, which are much stricter but still provide
+            enough data to populate the default dashboard.
+            These expressions omit many unused properties of the complex metrics,
+            and also skip whole groups of rarely used metrics: core ADMIN, REPLICATION,
+            HIGHLIGHTER, and selects only the most common QUERY handlers.
+
+            In order to use these expressions remove the default list of expressions
+            above and the START / END lines below. -->
+
+            <!-- === START ===
+
+            <str name="expr">solr\.jetty:.*\.DefaultHandler\.(dispatches|.*-requests|.*xx-responses):count</str>
+
+            <str name="expr">solr\.jvm:(buffers|gc).*</str>
+            <str name="expr">solr\.jvm:memory\.(heap|non-heap|pools)\.*\.usage</str>
+            <str name="expr">solr\.jvm:memory\.total</str>
+            <str name="expr">solr\.jvm:os\..*(FileDescriptorCount|Load.*|Size|processCpuTime)</str>
+            <str name="expr">solr\.jvm:threads\..*count</str>
+
+            <str name="expr">solr\.node:CONTAINER\.(cores|fs).*</str>
+
+            <str name="expr">solr\.core\..*:CORE\.fs\..*Space</str>
+            <str name="expr">solr\.core\..*:INDEX\.sizeInBytes</str>
+            <str name="expr">solr\.core\..*:QUERY\./(select|get|export|stream|query|graph|sql)\..*requestTimes:(count|1minRate|5minRate|median_ms|meanRate|p75_ms|p95_ms|p99_ms)</str>
+            <str name="expr">solr\.core\..*:QUERY\./(select|get|export|stream|query|graph|sql)\.totalTime</str>
+            <str name="expr">solr\.core\..*:QUERY\./(select|get|export|stream|query|graph|sql)\..*rrors:(count!1minRate)</str>
+            <str name="expr">solr\.core\..*:SEARCHER\.searcher\..*Doc.*</str>
+            <str name="expr">solr\.core\..*:UPDATE\.updateHandler\..*</str>
+            <str name="expr">solr\core\..*:CACHE\..*</str>
+
+            === END === -->
+
           </lst>
         </lst>
         <arr name="jsonQueries">
